compiler/pld-test-output/tests-tests-Init-6-if-6-19_tese/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:13: error: ‘c’ undeclared (first use in this function)
     if(a == c) {
             ^
input.c:3:13: note: each undeclared identifier is reported only once for each function it appears in

return code: 1
